NOTFORMERE: BUGFIX: fixed layout issue when tinymce event handler was not removed before the load request. BUGFIX: removed back button display when no history existed
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/branches/2.3@96959 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/ModelAdmin.css
+++ b/css/ModelAdmin.css
@@ -123,6 +123,10 @@ body.ModelAdmin #right .ajaxActions {
 	bottom: 35px !important;
 }
 
+	body.ModelAdmin #Form_EditForm_action_goBack {
+		display: none; /* Hide the back button by default. Shown when addHistory is Triggered */
+	}
+
 .tab h3 {
 	margin-top: 10px;
 	font-size: 1.2em;
